@@ -1,3 +1,6 @@
+HEAD
+	+ Plain usernames without mail domain now are allowed for mail
+	retrieval from external accounts 
 1.4.1
 	+ Bugfix, fix incorrect alias dn breaking aliases in postfix
 	+ Bugfix, when create a maildir if a leftover maildir already
